--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^2.0.12",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "antd": "^4.15.5",
+    "axios": "^0.21.1",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-invisible-recaptcha": "^0.2.11",
+    "react-icons": "^4.2.0",
+    "react-recaptcha": "^2.3.10",
     "react-scripts": "4.0.3",
+    "react-to-pdf": "0.0.13",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
